# TSiSA_labs

./: LICENSE  README.md
STaSA-lab-1/: CMakeLists.txt  README.md
STaSA-lab-1/include/: DichotomySearchResult.hpp  OptimalPassiveSearchResult.hpp
STaSA-lab-1/sources/: DichotomySearchResult.cpp  OptimalPassiveSearchResult.cpp  main.cpp
STaSA-lab-2/: README.md  lab.py
STaSA-lab-3/: README.md  lab3.py
STaSA-lab-4/: README.md  lr.py
STaSA-lab-5/: README.md
STaSA-lab-5/source/: criteria.py  hierarchy.py  major.py  pareto.py  union.py
STaSA-lab-6/: README.md  neuron.py
STaSA-lab-6/results/: data.csv
